--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 												1週間</p>
 												<p></p>
 												<p>コメント<br>
-												これは私の友人の動画クリエーターチームのホームページを無許可で作成したものです。</p>
+												これは友人の動画クリエーターチームのホームページを作成したものです。</p>
 												<p>URL<br>
 												<a href="file:https://ibukiterashima.github.io/github.io/">BlueHelmetオフィシャルホームページ</a></p>
 												<p></p>
