--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 													<figcaption class="works-body">
 														<div class ="works-photo">
-															<img src="キャプチャ.png" alt="">
+															<img src="キャプチャ.PNG" alt="">
 														</div>
 														<div class="works-title">
 															天文サークル　ホームページ
