--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 										<h2 class="heading-primary">FEATURE</h2>
 									</div>
 									<p class="section-lead">最新の制作実績です。</p>
-									<img src ="生坂村HP.png" >
+									<img src ="生坂村HP.PMG" >
 									<div class="section-body feature">
 										<div class="feature-item">
 											<div class="feature-image-wrapper"><img alt="" class="feature-image" src="img/feature/feature.jpg"></div>
